[package]
name = "hello_async"
version = "0.1.0"
authors = ["Aleksandr Kravtsov <sabahtalateh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1"
futures = "0.1"
tokio-core = "0.1"
mio = "0.6"
bytes = "0.4.12"
rand = "0.7.0"
